--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
      <script src="http://code.jquery.com/jquery-2.1.4.min.js"> </script>
     <script src="https://cdn.jsdelivr.net/foundation/6.1.0/foundation.min.js">
     </script>
-    <link rel="stylesheet" href="../source/js/css/foundation.css" />
+    <link rel="stylesheet" href=".././source/js/css/foundation.css" />
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
   <body>
