--- a/source/index.html
+++ b/source/index.html
@@ -28,6 +28,7 @@
     <script src="js/foundation.min.js"></script>
     <script src="js/foundation.abide.js"></script>
     <script src="js/app.js"></script>
+    <!-- <script src="js/utilities.js"></script> -->
     <script> $(document).foundation();</script>
   </body>
 </html>
