--- a/source/index.html
+++ b/source/index.html
@@ -11,6 +11,7 @@
     </script>
     <link rel="stylesheet" href=".././source/js/css/foundation.css" />
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
   </head>
   <body>
   
