--- a/source/index.html
+++ b/source/index.html
@@ -6,12 +6,9 @@
     <title>my test react file</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-     <script src="http://code.jquery.com/jquery-2.1.4.min.js"> </script>
-    <script src="https://cdn.jsdelivr.net/foundation/6.1.0/foundation.min.js">
-    </script>
-    <link rel="stylesheet" href=".././source/js/css/foundation.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.1.1/foundation.min.css">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
+   
   </head>
   <body>
   
@@ -24,11 +21,13 @@
   </div>
 
 
-  <script src="js/vendor/jquery.min.js"></script>
-    <script src="js/vendor/what-input.min.js"></script>
-    <script src="js/foundation.min.js"></script>
+    <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
+    <script src="http://code.jquery.com/jquery-2.1.4.min.js"> </script>
+     <script src="https://cdn.jsdelivr.net/foundation/6.1.1/foundation.min.js"></script>
+     
     <script src="js/foundation.abide.js"></script>
     <script src="js/app.js"></script>
+
     <!-- <script src="js/utilities.js"></script> -->
     <script> $(document).foundation();</script>
   </body>
