--- a/source/index.html
+++ b/source/index.html
@@ -6,9 +6,9 @@
     <title>my test react file</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.1.1/foundation.min.css">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
-   
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.1.1/foundation.min.css" />
+    <link rel="stylesheet" type="text/css" href="stylesheet.css" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Amaranth" />
   </head>
   <body>
   
